[Doc] Fix the SensorGlobal usage example

If qml type is registered with qmlRegisterSingletonType(), for example:

qmlRegisterSingletonType  <QmlSensorGlobal>(package, major, minor, "QmlSensors", global_object_50);

where:

package = "QtSensors"
major = 5
minor = 0

Then it can be accessed like this:

import QtSensors 5.0 as Sensors

var types = Sensors.QmlSensors.sensorTypes();

Task-number: QTBUG-33558
Change-Id: I228fb51e8a2887c59ac8edba1a944a9b2c6ec05f
Reviewed-by: Topi Reiniö <topi.reinio@digia.com>
Reviewed-by: Jerome Pasion <jerome.pasion@digia.com>